--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.1.3",
+    "firebase": "^9.12.1",
     "install": "^0.13.0",
     "npm": "^8.19.2",
     "react": "^18.2.0",
