--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"format": "prettier --cache --write .",
-		"lint": "eslint --cache ."
+		"lint": "eslint --cache .",
+		"postinstall": "husky install"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -58,6 +59,7 @@
 		"eslint": "^8.26.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-react": "^7.31.10",
+		"husky": "^8.0.1",
 		"prettier": "^2.7.1"
 	}
 }
