--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
-		"@types/jest": "^27.5.2",
 		"@types/node": "^16.11.66",
 		"@types/react": "^18.0.21",
 		"@types/react-dom": "^18.0.6",
@@ -54,12 +53,24 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/core": "^7.20.5",
+		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-react": "^7.18.6",
+		"@babel/preset-typescript": "^7.18.6",
+		"@types/jest": "^29.2.3",
 		"@typescript-eslint/eslint-plugin": "^5.42.0",
 		"@typescript-eslint/parser": "^5.42.0",
+		"babel-jest": "^29.3.1",
 		"eslint": "^8.26.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-react": "^7.31.10",
 		"husky": "^8.0.1",
+		"jest-styled-components": "^7.1.1",
 		"prettier": "^2.7.1"
+	},
+	"jest": {
+		"moduleNameMapper": {
+			"axios": "axios/dist/node/axios.cjs"
+		}
 	}
 }
